--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-media/
+lookbooks_library/
 scripts/
 backend/archivum/__pycache__
 backend/feed/__pycache__
@@ -8,3 +8,4 @@ outline
 env/
 frontend/node_modules
 backend/feed/migrations/
+backend/media
