--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "react": "^16.12.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.12.0",
+    "react-images": "^1.1.0-beta.0",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-spring": "^8.0.27"
