--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,15 +17,18 @@
     "react": "^16.12.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-images": "^1.1.0-beta.0",
     "react-photo-gallery": "^8.0.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-spring": "^8.0.27"
+    "react-slick": "^0.25.2",
+    "react-spring": "^8.0.27",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HOST=192.168.1.18 PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
