unit test for feed serializers

--- a/backend/.coveragerc
+++ b/backend/.coveragerc
@@ -3,3 +3,4 @@ omit =
         /home/joe/Projects/Archivum/env/*
         /home/joe/Projects/Archivum/backend/feed/tests/*
         /home/joe/Projects/Archivum/backend/feed/migrations/*
+        /home/joe/Projects/
