profile avatar & update profile feature

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ backend/feed/tests/__pycache__/
 backend/users/migrations/
 backend/users/__pycache__/
 backend/users/api/__pycache__/
+backend/users/tests/__pycache__/
