--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "radium": "^0.26.0",
     "react": "^16.12.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-images": "^1.1.0-beta.0",
