--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://192.168.1.18:8000",
   "eslintConfig": {
     "extends": "react-app"
   },
