--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,41 @@
 asgiref==3.2.3
+attrs==19.3.0
 boto3==1.10.45
 botocore==1.13.45
+certifi==2019.11.28
+chardet==3.0.4
+coverage==5.0.1
+defusedxml==0.6.0
 Django==3.0.3
 django-cors-headers==3.2.0
+django-cors-middleware==1.5.0
+django-rest-auth==0.9.5
 django-storages==1.8
 djangorestframework==3.11.0
 docutils==0.15.2
+Faker==0.9.1
+idna==2.8
 jmespath==0.9.4
+mixer==6.1.3
+more-itertools==8.0.2
+oauthlib==3.1.0
+packaging==19.2
+Pillow==7.0.0
+pluggy==0.13.1
 psycopg2==2.8.4
+py==1.8.1
+pyparsing==2.4.6
+pytest==5.3.2
+pytest-cov==2.8.1
+pytest-django==3.7.0
 python-dateutil==2.8.1
+python3-openid==3.1.0
 pytz==2019.3
+requests==2.22.0
+requests-oauthlib==1.3.0
 s3transfer==0.2.1
 six==1.13.0
 sqlparse==0.3.0
+text-unidecode==1.2
 urllib3==1.25.7
+wcwidth==0.1.8
