--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,3 +1,8 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = archivum.settings
 addopts = --cov --cov-report=html
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+    ignore::ImportWarning
+    ignore::ResourceWarning
